--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
         flex-wrap: wrap;
         margin-top: 20px;
       }
+      .card-body {;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+      }
       .card {
         width: 18rem;
+      }
+      img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
       }
     </style>
   </head>
